bk_ida/gccida/c1/precompute_register_parameters
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/precompute_register_parameters/src/calls.c:1317:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/precompute_register_parameters/src/calls.c:1345:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)v9, 
  ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/precompute_register_parameters/src/obj/calls.o] Error 1
